# Ask_Muzzamil

Backend/: Dockerfile.dev  README.md  compose.yaml  pyproject.toml
Backend/flash_ai/: main.py  settings.py
Frontend/: package-lock.json  package.json
Frontend/src/app/: page.tsx
